Update MasterclassDesc component: * refactor shop description classes to make more reusable with other items (e.g. presets) * font correction 	- remove bold style on headers 	- add bold style on module listing headers * increase padding and spacing to make more readable 	- increase line-height for all text 	- add grid row and column gaps 	- add margins between sections

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,12 @@
 .page-section {
   margin-bottom: 16rem;
 }
+
+.item-name-price {
+  text-align: center;
+  align-self: center;
+}
+
+.back-to-btn {
+  margin-bottom: 1rem;
+}
